feat(app): allow dynamic font and image sizing for insp. images
